fix layout issues and add text shadow to questions page

--- a/components/PageContainer/styles.module.css
+++ b/components/PageContainer/styles.module.css
@@ -2,6 +2,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 32px 0;
   min-width: 1003px;
+  height: 100vh;
 }
