--- a/pages/gameboard/styles.module.css
+++ b/pages/gameboard/styles.module.css
@@ -3,6 +3,7 @@
   justify-content: space-between;
   align-items: center;
   width: 1003px;
+  margin-top: 32px;
 }
 
 .topRow > h1 {
